--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>hw-01</title>
+    <title>hw-02</title>
   </head>
   <body>
     <!-- header-section -->
@@ -17,7 +17,7 @@
             <a href="./index.html">Studio</a>
           </li>
           <li>
-            <a href="">Portfolio</a>
+            <a href="./portfolio.html">Portfolio</a>
           </li>
           <li>
             <a href="">Contacts</a>
