--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <!-- header-section -->
     <header>
-      <a href="./index.html">WEBSTUDIO</a>
+      <a href="./index.html">webstudio-logo</a>
 
       <nav>
         <ul>
@@ -148,7 +148,7 @@
     <!-- footer -->
     <footer>
       <h2 hidden>Call to action</h2>
-      <a href="./index.html">WEBSTUDIO</a>
+      <a href="./index.html">webstudio-logo</a>
       <p>
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
