--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <!-- header-section -->
 
     <header>
-      <a href="./index.html">webstudio-logo</a>
+      <a href="./index.html">WEBSTUDIO</a>
 
       <nav>
         <ul>
@@ -105,7 +105,7 @@
     <!-- footer -->
     <footer>
       <h2 hidden>Call to action</h2>
-      <a href="./index.html">webstudio-logo</a>
+      <a href="./index.html">WEBSTUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
