--- a/portfolio.html
+++ b/portfolio.html
@@ -55,47 +55,77 @@
         <h2 hidden>Examples</h2>
         <ul>
           <li
-            ><img src="./img-potrfolio/example-1.jpg" alt="Banking App Interface Concept" />
+            ><img
+              src="./img-potrfolio/example-1.jpg"
+              alt="Banking App Interface Concept"
+              width="360"
+              height="300"
+            />
             <h3>Banking App Interface Concept</h3>
             <p>App</p>
           </li>
           <li
-            ><img src="./img-potrfolio/example-2.jpg" alt="Cashless Payment" />
+            ><img
+              src="./img-potrfolio/example-2.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="300"
+            />
             <h3>Cashless Payment</h3>
             <p>Marketing</p>
           </li>
           <li
-            ><img src="./img-potrfolio/example-3.jpg" alt="Meditaion App" />
+            ><img
+              src="./img-potrfolio/example-3.jpg"
+              alt="Meditaion App"
+              width="360"
+              height="300"
+            />
             <h3>Meditaion App</h3>
             <p>App</p>
           </li>
           <li
-            ><img src="./img-potrfolio/example-4.jpg" alt="Taxi Service" />
+            ><img src="./img-potrfolio/example-4.jpg" alt="Taxi Service" width="360" height="300" />
             <h3>Taxi Service</h3>
             <p>Marketing</p>
           </li>
           <li
-            ><img src="./img-potrfolio/example-5.jpg" alt="Screen Illustrations" />
+            ><img
+              src="./img-potrfolio/example-5.jpg"
+              alt="Screen Illustrations"
+              width="360"
+              height="300"
+            />
             <h3>Screen Illustrations</h3>
             <p>Design</p>
           </li>
           <li
-            ><img src="./img-potrfolio/example-6.jpg" alt="Online Courses" />
+            ><img
+              src="./img-potrfolio/example-6.jpg"
+              alt="Online Courses"
+              width="360"
+              height="300"
+            />
             <h3>Online Courses</h3>
             <p>Marketing</p>
           </li>
           <li
-            ><img src="./img-potrfolio/example-7.jpg" alt="Instagram Stories Concept" />
+            ><img
+              src="./img-potrfolio/example-7.jpg"
+              alt="Instagram Stories Concept"
+              width="360"
+              height="300"
+            />
             <h3>Instagram Stories Concept</h3>
             <p>Design</p>
           </li>
           <li
-            ><img src="./img-potrfolio/example-8.jpg" alt="Organic Food" />
+            ><img src="./img-potrfolio/example-8.jpg" alt="Organic Food" width="360" height="300" />
             <h3>Organic Food</h3>
             <p>Web Site</p>
           </li>
           <li
-            ><img src="./img-potrfolio/example-9.jpg" alt="Fresh Coffee" />
+            ><img src="./img-potrfolio/example-9.jpg" alt="Fresh Coffee" width="360" height="300" />
             <h3>Fresh Coffee</h3>
             <p>Web Site</p>
           </li>
