--- a/portfolio.html
+++ b/portfolio.html
@@ -15,28 +15,28 @@
   <body>
     <!-- header-section -->
     <header>
-      <a href="./index.html">WEBSTUDIO</a>
+      <a href="./index.html">webstudio</a>
 
-      <nav>
-        <ul>
-          <li>
-            <a href="./index.html">Studio</a>
+      <nav class="nav">
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a href="./index.html" class="nav-link">Studio</a>
           </li>
-          <li>
-            <a href="./portfolio.html">Portfolio</a>
+          <li class="nav-item">
+            <a href="./portfolio.html" class="nav-link">Portfolio</a>
           </li>
-          <li>
-            <a href="">Contacts</a>
+          <li class="nav-item">
+            <a href="" class="nav-link">Contacts</a>
           </li>
         </ul>
       </nav>
 
-      <ul>
-        <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <ul class="contacts">
+        <li class="contacts-item">
+          <a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a>
         </li>
-        <li>
-          <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <li class="contacts-item">
+          <a href="tel:+110001111111" class="contacts-link">+11 (000) 111-11-11</a>
         </li>
       </ul>
     </header>
