--- a/index.html
+++ b/index.html
@@ -8,35 +8,37 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- header-section -->
     <header>
-      <a href="./index.html">WEBSTUDIO</a>
+      <a href="./index.html" class="link">webstudio</a>
 
       <nav>
-        <ul>
+        <ul class="list">
           <li>
-            <a href="./index.html">Studio</a>
+            <a href="./index.html" class="link">Studio</a>
           </li>
           <li>
-            <a href="./portfolio.html">Portfolio</a>
+            <a href="./portfolio.html" class="link">Portfolio</a>
           </li>
           <li>
-            <a href="">Contacts</a>
+            <a href="" class="link">Contacts</a>
           </li>
         </ul>
       </nav>
 
-      <ul>
+      <ul class="list">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
         </li>
       </ul>
     </header>
@@ -52,7 +54,7 @@
       <!-- advances -->
       <section>
         <h2 hidden>Why our webstudio is the best</h2>
-        <ul>
+        <ul class="list">
           <li>
             <h3>Strategy</h3>
             <p>
@@ -87,7 +89,7 @@
       <!-- features -->
       <section>
         <h2>What are we doing</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/features/feature-4.jpg"
@@ -120,7 +122,7 @@
         <h2>Our Team</h2>
 
         <!-- teem-card-1 -->
-        <ul>
+        <ul class="list">
           <li>
             <img src="./images/team/employee-1.jpg" alt="employee-1" width="264" height="260" />
             <h3>Mark Guerrero</h3>
@@ -154,7 +156,7 @@
     <!-- footer -->
     <footer>
       <h2 hidden>Call to action</h2>
-      <a href="./index.html">WEBSTUDIO</a>
+      <a href="./index.html" class="link">webstudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
