--- a/portfolio.html
+++ b/portfolio.html
@@ -8,35 +8,37 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- header-section -->
     <header>
-      <a href="./index.html">webstudio</a>
+      <a href="./index.html" class="link">webstudio</a>
 
-      <nav class="nav">
-        <ul class="nav-list">
-          <li class="nav-item">
-            <a href="./index.html" class="nav-link">Studio</a>
+      <nav>
+        <ul class="list">
+          <li>
+            <a href="./index.html" class="link">Studio</a>
           </li>
-          <li class="nav-item">
-            <a href="./portfolio.html" class="nav-link">Portfolio</a>
+          <li>
+            <a href="./portfolio.html" class="link">Portfolio</a>
           </li>
-          <li class="nav-item">
-            <a href="" class="nav-link">Contacts</a>
+          <li>
+            <a href="" class="link">Contacts</a>
           </li>
         </ul>
       </nav>
 
-      <ul class="contacts">
-        <li class="contacts-item">
-          <a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a>
+      <ul class="list">
+        <li>
+          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
         </li>
-        <li class="contacts-item">
-          <a href="tel:+110001111111" class="contacts-link">+11 (000) 111-11-11</a>
+        <li>
+          <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
         </li>
       </ul>
     </header>
@@ -46,7 +48,7 @@
       <!-- our services -->
       <h2 hidden>Our services</h2>
       <nav>
-        <ul>
+        <ul class="list">
           <li><button type="button">All</button></li>
           <li><button type="button">Web Site</button></li>
           <li><button type="button">App</button></li>
@@ -58,7 +60,7 @@
       <!-- examples -->
       <section>
         <h2 hidden>Examples</h2>
-        <ul>
+        <ul class="list">
           <li
             ><img
               src="./img-potrfolio/example-1.jpg"
@@ -140,7 +142,7 @@
     <!-- footer -->
     <footer>
       <h2 hidden>Call to action</h2>
-      <a href="./index.html">WEBSTUDIO</a>
+      <a href="./index.html" class="link">webstudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
