--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,29 +15,29 @@
   </head>
   <body>
     <!-- header-section -->
-    <header>
-      <a href="./index.html" class="link">webstudio</a>
+    <header class="page-header">
+      <a href="./index.html" class="link logo"><span class="logo-item">web</span>studio</a>
 
-      <nav>
-        <ul class="list">
-          <li>
-            <a href="./index.html" class="link">Studio</a>
+      <nav class="page-nav">
+        <ul class="list nav-list">
+          <li class="nav-list-item">
+            <a href="./index.html" class="link nav-list-link">Studio</a>
           </li>
-          <li>
-            <a href="./portfolio.html" class="link">Portfolio</a>
+          <li class="nav-list-item">
+            <a href="./portfolio.html" class="link nav-list-link">Portfolio</a>
           </li>
-          <li>
-            <a href="" class="link">Contacts</a>
+          <li class="nav-list-item">
+            <a href="" class="link nav-list-link">Contacts</a>
           </li>
         </ul>
       </nav>
 
-      <ul class="list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+      <ul class="list contact-list">
+        <li class="contact-list-item">
+          <a href="mailto:info@devstudio.com" class="link contact-list-link">info@devstudio.com</a>
         </li>
-        <li>
-          <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+        <li class="contact-list-item">
+          <a href="tel:+110001111111" class="link contact-list-link">+11 (000) 111-11-11</a>
         </li>
       </ul>
     </header>
