--- a/portfolio.html
+++ b/portfolio.html
@@ -14,135 +14,125 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- header-section -->
+    <!----------------------------------- header-section -------------------------------------->
     <header class="page-header">
-      <a href="./index.html" class="link logo"><span class="logo-item">web</span>studio</a>
+      <a href="./index.html" class="link logo"
+        ><span class="logo-item">web</span><span class="logo-syllable">studio</span></a
+      >
 
-      <nav class="page-nav">
-        <ul class="list nav-list">
+      <nav class="nav">
+        <ul class="nav-list list">
           <li class="nav-list-item">
-            <a href="./index.html" class="link nav-list-link">Studio</a>
+            <a href="./index.html" class="nav-list-link link">Studio</a>
           </li>
           <li class="nav-list-item">
-            <a href="./portfolio.html" class="link nav-list-link">Portfolio</a>
+            <a href="./portfolio.html" class="nav-list-link link">Portfolio</a>
           </li>
           <li class="nav-list-item">
-            <a href="" class="link nav-list-link">Contacts</a>
+            <a href="" class="nav-list-link link">Contacts</a>
           </li>
         </ul>
       </nav>
 
-      <ul class="list contact-list">
+      <ul class="contact-list list">
         <li class="contact-list-item">
-          <a href="mailto:info@devstudio.com" class="link contact-list-link">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="contact-list-link link">info@devstudio.com</a>
         </li>
         <li class="contact-list-item">
-          <a href="tel:+110001111111" class="link contact-list-link">+11 (000) 111-11-11</a>
+          <a href="tel:+110001111111" class="contact-list-link link">+11 (000) 111-11-11</a>
         </li>
       </ul>
     </header>
 
-    <!-- main -->
     <main>
-      <!-- our services -->
-      <h2 hidden>Our services</h2>
-      <nav>
-        <ul class="list">
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
-        </ul>
-      </nav>
+      <!--------------------------------------- filter ---------------------------------------->
+      <h1 hidden>Our services</h1>
+      <ul class="filter-list list">
+        <li><button type="button" class="filter-list-btn">All</button></li>
+        <li><button type="button" class="filter-list-btn">Web Site</button></li>
+        <li><button type="button" class="filter-list-btn">App</button></li>
+        <li><button type="button" class="filter-list-btn">Design</button></li>
+        <li><button type="button" class="filter-list-btn">Marketing</button></li>
+      </ul>
 
-      <!-- examples -->
-      <section>
-        <h2 hidden>Examples</h2>
-        <ul class="list">
-          <li
-            ><img
-              src="./img-potrfolio/example-1.jpg"
-              alt="Banking App Interface Concept"
-              width="360"
-              height="300"
-            />
-            <h3>Banking App Interface Concept</h3>
-            <p>App</p>
-          </li>
-          <li
-            ><img
-              src="./img-potrfolio/example-2.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
-          </li>
-          <li
-            ><img
-              src="./img-potrfolio/example-3.jpg"
-              alt="Meditaion App"
-              width="360"
-              height="300"
-            />
-            <h3>Meditaion App</h3>
-            <p>App</p>
-          </li>
-          <li
-            ><img src="./img-potrfolio/example-4.jpg" alt="Taxi Service" width="360" height="300" />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
-          </li>
-          <li
-            ><img
-              src="./img-potrfolio/example-5.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
-          </li>
-          <li
-            ><img
-              src="./img-potrfolio/example-6.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
-          </li>
-          <li
-            ><img
-              src="./img-potrfolio/example-7.jpg"
-              alt="Instagram Stories Concept"
-              width="360"
-              height="300"
-            />
-            <h3>Instagram Stories Concept</h3>
-            <p>Design</p>
-          </li>
-          <li
-            ><img src="./img-potrfolio/example-8.jpg" alt="Organic Food" width="360" height="300" />
-            <h3>Organic Food</h3>
-            <p>Web Site</p>
-          </li>
-          <li
-            ><img src="./img-potrfolio/example-9.jpg" alt="Fresh Coffee" width="360" height="300" />
-            <h3>Fresh Coffee</h3>
-            <p>Web Site</p>
-          </li>
-        </ul>
-      </section>
+      <!--------------------------------------- examples ---------------------------------------->
+      <h2 hidden>Examples</h2>
+      <ul class="examples-list list">
+        <li class="examples-list-item"
+          ><img
+            src="./img-potrfolio/example-1.jpg"
+            alt="Banking App Interface Concept"
+            width="360"
+            height="300"
+          />
+          <h3 class="examples-list-item-title">Banking App Interface Concept</h3>
+          <p>App</p>
+        </li>
+        <li class="examples-list-item"
+          ><img
+            src="./img-potrfolio/example-2.jpg"
+            alt="Cashless Payment"
+            width="360"
+            height="300"
+          />
+          <h3 class="examples-list-item-title">Cashless Payment</h3>
+          <p class="examples-list-item-text">Marketing</p>
+        </li>
+        <li class="examples-list-item"
+          ><img src="./img-potrfolio/example-3.jpg" alt="Meditaion App" width="360" height="300" />
+          <h3 class="examples-list-item-title">Meditaion App</h3>
+          <p class="examples-list-item-text">App</p>
+        </li>
+        <li class="examples-list-item"
+          ><img src="./img-potrfolio/example-4.jpg" alt="Taxi Service" width="360" height="300" />
+          <h3 class="examples-list-item-title">Taxi Service</h3>
+          <p class="examples-list-item-text">Marketing</p>
+        </li>
+        <li class="examples-list-item"
+          ><img
+            src="./img-potrfolio/example-5.jpg"
+            alt="Screen Illustrations"
+            width="360"
+            height="300"
+          />
+          <h3 class="examples-list-item-title">Screen Illustrations</h3>
+          <p class="examples-list-item-text">Design</p>
+        </li>
+        <li class="examples-list-item"
+          ><img src="./img-potrfolio/example-6.jpg" alt="Online Courses" width="360" height="300" />
+          <h3 class="examples-list-item-title">Online Courses</h3>
+          <p class="examples-list-item-text">Marketing</p>
+        </li>
+        <li class="examples-list-item"
+          ><img
+            src="./img-potrfolio/example-7.jpg"
+            alt="Instagram Stories Concept"
+            width="360"
+            height="300"
+          />
+          <h3 class="examples-list-item-title">Instagram Stories Concept</h3>
+          <p class="examples-list-item-text">Design</p>
+        </li>
+        <li class="examples-list-item"
+          ><img src="./img-potrfolio/example-8.jpg" alt="Organic Food" width="360" height="300" />
+          <h3 class="examples-list-item-title">Organic Food</h3>
+          <p class="examples-list-item-text">Web Site</p>
+        </li>
+        <li class="examples-list-item"
+          ><img src="./img-potrfolio/example-9.jpg" alt="Fresh Coffee" width="360" height="300" />
+          <h3 class="examples-list-item-title">Fresh Coffee</h3>
+          <p class="examples-list-item-text">Web Site</p>
+        </li>
+      </ul>
     </main>
-    <!-- footer -->
-    <footer>
+    <!-- -------------------------------------- footer ------------------------------------------>
+    <footer class="footer">
       <h2 hidden>Call to action</h2>
-      <a href="./index.html" class="link">webstudio</a>
-      <p>
+      <a href="./index.html" class="link footer-logo"
+        ><span class="logo-item">web</span
+        ><span class="footer-logo-syllable-secondary">studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
       </p>
