--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <!--------------------------------- hero-section -------------------------------------->
       <section class="hero-section">
         <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-btn">Order service</button>
+        <button type="button" class="hero-btn pointer">Order service</button>
       </section>
 
       <!----------------------------------- advances ----------------------------------------->
