--- a/portfolio.html
+++ b/portfolio.html
@@ -48,11 +48,11 @@
       <!--------------------------------------- filter ---------------------------------------->
       <h1 hidden>Our services</h1>
       <ul class="filter-list list">
-        <li><button type="button" class="filter-list-btn">All</button></li>
-        <li><button type="button" class="filter-list-btn">Web Site</button></li>
-        <li><button type="button" class="filter-list-btn">App</button></li>
-        <li><button type="button" class="filter-list-btn">Design</button></li>
-        <li><button type="button" class="filter-list-btn">Marketing</button></li>
+        <li><button type="button" class="filter-list-btn pointer">All</button></li>
+        <li><button type="button" class="filter-list-btn pointer">Web Site</button></li>
+        <li><button type="button" class="filter-list-btn pointer">App</button></li>
+        <li><button type="button" class="filter-list-btn pointer">Design</button></li>
+        <li><button type="button" class="filter-list-btn pointer">Marketing</button></li>
       </ul>
 
       <!--------------------------------------- examples ---------------------------------------->
